GAA-275 and GAA-148 (bold text + overflow text fix)

--- a/node-app/src/views/source/components/content/news-tiles/style.scss
+++ b/node-app/src/views/source/components/content/news-tiles/style.scss
@@ -130,6 +130,7 @@
                         background-color: rgba(0, 0, 0, 0.75);
                         display:flex;
                         flex-direction: column;
+                        font-weight: 400;
                         .detail-container{
                             padding: 0;
                             .title{
@@ -147,18 +148,21 @@
                             .date{
                                 font-size: 10px;
                                 color: $light-grey-color;
-                                line-height: 31px;
+                                line-height: 25px;
                             }
                         }
                         .bg-name{
                             font-size: 10px;
                             color: $light-yellow-color;
                             text-transform: uppercase;
-                            line-height: 18px;
-                            width: 90%;
+                            line-height: 23px;
+                            width: 85%;
                             max-height: 16px;
                             overflow: hidden;
                             text-overflow: ellipsis;
+                            display: -webkit-inline-box;
+                            -webkit-line-clamp: 1;
+                            -webkit-box-orient: vertical;
                         }
                       }
                       
